[gd_scene load_steps=17 format=3 uid="uid://bamp5cdugnndr"]

[ext_resource type="Texture2D" uid="uid://c0dcw8pa0f1c8" path="res://assets/Seasonal Tilesets/2 - Autumn Forest/Terrain (16 x 16).png" id="1_6goru"]
[ext_resource type="Script" path="res://scripts/world_3.gd" id="1_g4gcd"]
[ext_resource type="Texture2D" uid="uid://b5onjmq74v2e" path="res://assets/Seasonal Tilesets/2 - Autumn Forest/Background parts/6 - Distant_trees.png" id="2_evj0c"]
[ext_resource type="Texture2D" uid="uid://chfu0x2nav6de" path="res://assets/Seasonal Tilesets/2 - Autumn Forest/Background parts/5 - Tree_row_BG_2.png" id="3_cc6mj"]
[ext_resource type="Texture2D" uid="uid://canhi6wak6kqf" path="res://assets/Seasonal Tilesets/2 - Autumn Forest/Background parts/4 - Tree_row_BG_1.png" id="4_yengl"]
[ext_resource type="Texture2D" uid="uid://ch0qwckdn7gy1" path="res://assets/Seasonal Tilesets/2 - Autumn Forest/Background parts/2 - Trees.png" id="5_isoyx"]
[ext_resource type="Texture2D" uid="uid://dbpucibliy62o" path="res://assets/Seasonal Tilesets/2 - Autumn Forest/Background parts/1 - Leaf_top.png" id="6_djty6"]
[ext_resource type="PackedScene" uid="uid://cma77dbhq8kwx" path="res://actors/player.tscn" id="7_oycwm"]
[ext_resource type="PackedScene" uid="uid://dt6wu0snjq5lr" path="res://actors/boss_fireball.tscn" id="9_7ndxe"]
[ext_resource type="Texture2D" path="res://assets/boss_plataform/Boss_plataform.png" id="10_us368"]

[sub_resource type="TileMapPattern" id="TileMapPattern_apoud"]
tile_data = PackedInt32Array(0, 262144, 1, 65536, 262144, 2, 131072, 262144, 2, 196608, 262144, 2, 262144, 262144, 2, 327680, 262144, 2, 393216, 262144, 2, 1, 262144, 1, 65537, 262144, 2, 131073, 262144, 2, 196609, 262144, 2, 262145, 262144, 2, 327681, 262144, 2, 393217, 262144, 2, 2, 262144, 1, 65538, 262144, 2, 131074, 262144, 2, 196610, 262144, 2, 262146, 262144, 2, 327682, 262144, 2, 393218, 262144, 2, 3, 262144, 1, 65539, 262144, 2, 131075, 262144, 2, 196611, 262144, 2, 262147, 262144, 2, 327683, 262144, 2, 393219, 262144, 2, 4, 262144, 1, 65540, 262144, 2, 131076, 262144, 2, 196612, 262144, 2, 262148, 262144, 2, 327684, 262144, 2, 393220, 262144, 2, 5, 262144, 1, 65541, 262144, 2, 131077, 262144, 2, 196613, 262144, 2, 262149, 262144, 2, 327685, 262144, 2, 393221, 262144, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_qtlll"]
tile_data = PackedInt32Array(0, 589824, 3, 1, 655360, 3, 2, 851968, 3)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d3kx4"]
texture = ExtResource("1_6goru")
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0/physics_layer_0/polygon_0/one_way = true
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0/physics_layer_0/polygon_0/one_way = true
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0/physics_layer_0/polygon_0/one_way = true
15:3/0 = 0
15:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:3/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_o15kp"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_d3kx4")
pattern_0 = SubResource("TileMapPattern_apoud")
pattern_1 = SubResource("TileMapPattern_qtlll")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gcn1j"]
size = Vector2(80, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kipf"]
size = Vector2(119, 102)

[node name="World_3" type="Node2D"]
script = ExtResource("1_g4gcd")

[node name="Background" type="ParallaxBackground" parent="."]

[node name="6" type="ParallaxLayer" parent="Background"]
position = Vector2(0, 175)
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(576, 416)

[node name="Texture" type="Sprite2D" parent="Background/6"]
position = Vector2(0, -3)
scale = Vector2(2, 2)
texture = ExtResource("2_evj0c")
centered = false

[node name="5" type="ParallaxLayer" parent="Background"]
position = Vector2(0, 386)
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(576, 416)

[node name="Texture" type="Sprite2D" parent="Background/5"]
position = Vector2(0, -164.406)
scale = Vector2(2, 2)
texture = ExtResource("3_cc6mj")
centered = false

[node name="4" type="ParallaxLayer" parent="Background"]
position = Vector2(0, 386)
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(576, 0)

[node name="Texture" type="Sprite2D" parent="Background/4"]
texture_repeat = 2
position = Vector2(0, -152.406)
scale = Vector2(2, 2)
texture = ExtResource("4_yengl")
centered = false

[node name="2" type="ParallaxLayer" parent="Background"]
position = Vector2(0, 386)
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(576, 0)

[node name="Texture" type="Sprite2D" parent="Background/2"]
position = Vector2(0, -141.406)
scale = Vector2(2, 2)
texture = ExtResource("5_isoyx")
centered = false

[node name="1" type="ParallaxLayer" parent="Background"]
position = Vector2(0, 386)
motion_mirroring = Vector2(576, 0)

[node name="Texture" type="Sprite2D" parent="Background/1"]
position = Vector2(-3, -178)
scale = Vector2(2, 2)
texture = ExtResource("6_djty6")
centered = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_o15kp")
format = 2
layer_0/tile_data = PackedInt32Array(2490381, 262144, 1, 2555917, 262144, 2, 2621453, 262144, 2, 2686989, 262144, 2, 2752525, 262144, 2, 2818061, 262144, 2, 2883597, 262144, 2, 2490382, 262144, 1, 2555918, 262144, 2, 2621454, 262144, 2, 2686990, 262144, 2, 2752526, 262144, 2, 2818062, 262144, 2, 2883598, 262144, 2, 2490383, 262144, 1, 2555919, 262144, 2, 2621455, 262144, 2, 2686991, 262144, 2, 2752527, 262144, 2, 2818063, 262144, 2, 2883599, 262144, 2, 2490384, 262144, 1, 2555920, 262144, 2, 2621456, 262144, 2, 2686992, 262144, 2, 2752528, 262144, 2, 2818064, 262144, 2, 2883600, 262144, 2, 2490385, 262144, 1, 2555921, 262144, 2, 2621457, 262144, 2, 2686993, 262144, 2, 2752529, 262144, 2, 2818065, 262144, 2, 2883601, 262144, 2, 2490386, 262144, 1, 2555922, 262144, 2, 2621458, 262144, 2, 2686994, 262144, 2, 2752530, 262144, 2, 2818066, 262144, 2, 2883602, 262144, 2, 2490387, 262144, 1, 2555923, 262144, 2, 2621459, 262144, 2, 2686995, 262144, 2, 2752531, 262144, 2, 2818067, 262144, 2, 2883603, 262144, 2, 2490388, 262144, 1, 2555924, 262144, 2, 2621460, 262144, 2, 2686996, 262144, 2, 2752532, 262144, 2, 2818068, 262144, 2, 2883604, 262144, 2, 2490389, 262144, 1, 2555925, 262144, 2, 2621461, 262144, 2, 2686997, 262144, 2, 2752533, 262144, 2, 2818069, 262144, 2, 2883605, 262144, 2, 2490390, 262144, 1, 2555926, 262144, 2, 2621462, 262144, 2, 2686998, 262144, 2, 2752534, 262144, 2, 2818070, 262144, 2, 2883606, 262144, 2, 2490391, 262144, 1, 2555927, 262144, 2, 2621463, 262144, 2, 2686999, 262144, 2, 2752535, 262144, 2, 2818071, 262144, 2, 2883607, 262144, 2, 2490392, 262144, 1, 2555928, 262144, 2, 2621464, 262144, 2, 2687000, 262144, 2, 2752536, 262144, 2, 2818072, 262144, 2, 2883608, 262144, 2, 2490393, 262144, 1, 2555929, 262144, 2, 2621465, 262144, 2, 2687001, 262144, 2, 2752537, 262144, 2, 2818073, 262144, 2, 2883609, 262144, 2, 2490394, 262144, 1, 2555930, 262144, 2, 2621466, 262144, 2, 2687002, 262144, 2, 2752538, 262144, 2, 2818074, 262144, 2, 2883610, 262144, 2, 2490395, 262144, 1, 2555931, 262144, 2, 2621467, 262144, 2, 2687003, 262144, 2, 2752539, 262144, 2, 2818075, 262144, 2, 2883611, 262144, 2, 2490396, 262144, 1, 2555932, 262144, 2, 2621468, 262144, 2, 2687004, 262144, 2, 2752540, 262144, 2, 2818076, 262144, 2, 2883612, 262144, 2, 2490397, 262144, 1, 2555933, 262144, 2, 2621469, 262144, 2, 2687005, 262144, 2, 2752541, 262144, 2, 2818077, 262144, 2, 2883613, 262144, 2, 2490398, 262144, 1, 2555934, 262144, 2, 2621470, 262144, 2, 2687006, 262144, 2, 2752542, 262144, 2, 2818078, 262144, 2, 2883614, 262144, 2, 2490399, 262144, 1, 2555935, 262144, 2, 2621471, 262144, 2, 2687007, 262144, 2, 2752543, 262144, 2, 2818079, 262144, 2, 2883615, 262144, 2, 2490400, 262144, 1, 2555936, 262144, 2, 2621472, 262144, 2, 2687008, 262144, 2, 2752544, 262144, 2, 2818080, 262144, 2, 2883616, 262144, 2, 2490401, 262144, 1, 2555937, 262144, 2, 2621473, 262144, 2, 2687009, 262144, 2, 2752545, 262144, 2, 2818081, 262144, 2, 2883617, 262144, 2, 2490402, 262144, 1, 2555938, 262144, 2, 2621474, 262144, 2, 2687010, 262144, 2, 2752546, 262144, 2, 2818082, 262144, 2, 2883618, 262144, 2, 2490403, 262144, 1, 2555939, 262144, 2, 2621475, 262144, 2, 2687011, 262144, 2, 2752547, 262144, 2, 2818083, 262144, 2, 2883619, 262144, 2, 2490404, 262144, 1, 2555940, 262144, 2, 2621476, 262144, 2, 2687012, 262144, 2, 2752548, 262144, 2, 2818084, 262144, 2, 2883620, 262144, 2, 2490405, 262144, 1, 2555941, 262144, 2, 2621477, 262144, 2, 2687013, 262144, 2, 2752549, 262144, 2, 2818085, 262144, 2, 2883621, 262144, 2, 2490406, 262144, 1, 2555942, 262144, 2, 2621478, 262144, 2, 2687014, 262144, 2, 2752550, 262144, 2, 2818086, 262144, 2, 2883622, 262144, 2, 2490407, 262144, 1, 2555943, 262144, 2, 2621479, 262144, 2, 2687015, 262144, 2, 2752551, 262144, 2, 2818087, 262144, 2, 2883623, 262144, 2, 2490408, 262144, 1, 2555944, 262144, 2, 2621480, 262144, 2, 2687016, 262144, 2, 2752552, 262144, 2, 2818088, 262144, 2, 2883624, 262144, 2, 2490409, 262144, 1, 2555945, 262144, 2, 2621481, 262144, 2, 2687017, 262144, 2, 2752553, 262144, 2, 2818089, 262144, 2, 2883625, 262144, 2, 2490410, 262144, 1, 2555946, 262144, 2, 2621482, 262144, 2, 2687018, 262144, 2, 2752554, 262144, 2, 2818090, 262144, 2, 2883626, 262144, 2, 2490411, 262144, 1, 2555947, 262144, 2, 2621483, 262144, 2, 2687019, 262144, 2, 2752555, 262144, 2, 2818091, 262144, 2, 2883627, 262144, 2, 2490412, 262144, 1, 2555948, 262144, 2, 2621484, 262144, 2, 2687020, 262144, 2, 2752556, 262144, 2, 2818092, 262144, 2, 2883628, 262144, 2, 2490413, 262144, 1, 2555949, 262144, 2, 2621485, 262144, 2, 2687021, 262144, 2, 2752557, 262144, 2, 2818093, 262144, 2, 2883629, 262144, 2, 2490414, 262144, 1, 2555950, 262144, 2, 2621486, 262144, 2, 2687022, 262144, 2, 2752558, 262144, 2, 2818094, 262144, 2, 2883630, 262144, 2, 2490415, 262144, 1, 2555951, 262144, 2, 2621487, 262144, 2, 2687023, 262144, 2, 2752559, 262144, 2, 2818095, 262144, 2, 2883631, 262144, 2, 2490416, 262144, 1, 2555952, 262144, 2, 2621488, 262144, 2, 2687024, 262144, 2, 2752560, 262144, 2, 2818096, 262144, 2, 2883632, 262144, 2, 2490417, 262144, 3, 2555953, 262144, 3, 2621489, 262144, 3, 2687025, 262144, 3, 2752561, 262144, 3, 2818097, 262144, 3, 2883633, 262144, 3, 2490418, 262144, 3, 2555954, 262144, 3, 2621490, 262144, 3, 2687026, 262144, 3, 2752562, 262144, 3, 2818098, 262144, 3, 2883634, 262144, 3, 2490419, 262144, 3, 2555955, 262144, 3, 2621491, 262144, 3, 2687027, 262144, 3, 2752563, 262144, 3, 2818099, 262144, 3, 2883635, 262144, 3, 2490420, 262144, 3, 2555956, 262144, 3, 2621492, 262144, 3, 2687028, 262144, 3, 2752564, 262144, 3, 2818100, 262144, 3, 2883636, 262144, 3, 655367, 262144, 3, 720903, 262144, 3, 786439, 262144, 3, 851975, 262144, 3, 917511, 262144, 3, 983047, 262144, 3, 1048583, 262144, 3, 1114119, 262144, 3, 1179655, 262144, 3, 1245191, 262144, 3, 1310727, 262144, 3, 1376263, 262144, 3, 1441799, 262144, 3, 1507335, 262144, 3, 1572871, 262144, 3, 1638407, 262144, 3, 1703943, 262144, 3, 1769479, 262144, 3, 1835015, 262144, 3, 1900551, 262144, 3, 1966087, 262144, 3, 2031623, 262144, 3, 2097159, 262144, 3, 2162695, 262144, 3, 2228231, 262144, 3, 2293767, 262144, 3, 2359303, 262144, 3, 2424839, 262144, 3, 2490375, 262144, 3, 2555911, 262144, 3, 2621447, 262144, 3, 2686983, 262144, 3, 2752519, 262144, 3, 2818055, 262144, 3, 2883591, 262144, 3, 655368, 262144, 2, 720904, 262144, 2, 786440, 262144, 2, 851976, 262144, 2, 917512, 262144, 2, 983048, 262144, 2, 1048584, 262144, 2, 1114120, 262144, 2, 1179656, 262144, 2, 1245192, 262144, 2, 1310728, 262144, 2, 1376264, 262144, 2, 1441800, 262144, 2, 1507336, 262144, 2, 1572872, 262144, 2, 1638408, 262144, 2, 1703944, 262144, 2, 1769480, 262144, 2, 1835016, 262144, 2, 1900552, 262144, 2, 1966088, 262144, 2, 2031624, 262144, 2, 2097160, 262144, 2, 2162696, 262144, 2, 2228232, 262144, 2, 2293768, 262144, 2, 2359304, 262144, 2, 2424840, 262144, 2, 2490376, 262144, 2, 2555912, 262144, 2, 2621448, 262144, 2, 2686984, 262144, 2, 2752520, 262144, 2, 2818056, 262144, 2, 2883592, 262144, 2, 655369, 262144, 2, 720905, 262144, 2, 786441, 262144, 2, 851977, 262144, 2, 917513, 262144, 2, 983049, 262144, 2, 1048585, 262144, 2, 1114121, 262144, 2, 1179657, 262144, 2, 1245193, 262144, 2, 1310729, 262144, 2, 1376265, 262144, 2, 1441801, 262144, 2, 1507337, 262144, 2, 1572873, 262144, 2, 1638409, 262144, 2, 1703945, 262144, 2, 1769481, 262144, 2, 1835017, 262144, 2, 1900553, 262144, 2, 1966089, 262144, 2, 2031625, 262144, 2, 2097161, 262144, 2, 2162697, 262144, 2, 2228233, 262144, 2, 2293769, 262144, 2, 2359305, 262144, 2, 2424841, 262144, 2, 2490377, 262144, 2, 2555913, 262144, 2, 2621449, 262144, 2, 2686985, 262144, 2, 2752521, 262144, 2, 2818057, 262144, 2, 2883593, 262144, 2, 655370, 327680, 2, 720906, 327680, 2, 786442, 327680, 2, 851978, 327680, 2, 917514, 327680, 2, 983050, 327680, 2, 1048586, 327680, 2, 1114122, 327680, 2, 1179658, 327680, 2, 1245194, 327680, 2, 1310730, 327680, 2, 1376266, 327680, 2, 1441802, 327680, 2, 1507338, 327680, 2, 1572874, 327680, 2, 1638410, 327680, 2, 1703946, 327680, 2, 1769482, 327680, 2, 1835018, 327680, 2, 1900554, 327680, 2, 1966090, 327680, 2, 2031626, 327680, 2, 2097162, 327680, 2, 2162698, 327680, 2, 2228234, 327680, 2, 2293770, 327680, 2, 2359306, 327680, 2, 2424842, 327680, 2, 2490378, 262144, 2, 2555914, 262144, 2, 2621450, 262144, 2, 2686986, 262144, 2, 2752522, 262144, 2, 2818058, 262144, 2, 2883594, 262144, 2, 2490379, 262144, 1, 2555915, 262144, 2, 2621451, 262144, 2, 2686987, 262144, 2, 2752523, 262144, 2, 2818059, 262144, 2, 2883595, 262144, 2, 2490380, 262144, 1, 2555916, 262144, 2, 2621452, 262144, 2, 2686988, 262144, 2, 2752524, 262144, 2, 2818060, 262144, 2, 2883596, 262144, 2, 720945, 196608, 2, 786481, 196608, 2, 852017, 196608, 2, 917553, 196608, 2, 983089, 196608, 2, 1048625, 196608, 2, 1114161, 196608, 2, 1179697, 196608, 2, 1245233, 196608, 2, 1310769, 196608, 2, 1376305, 196608, 2, 1441841, 196608, 2, 1507377, 196608, 2, 1572913, 196608, 2, 1638449, 196608, 2, 1703985, 196608, 2, 1769521, 196608, 2, 1835057, 196608, 2, 1900593, 196608, 2, 1966129, 196608, 2, 2031665, 196608, 2, 2097201, 196608, 2, 2162737, 196608, 2, 2228273, 196608, 2, 2293809, 196608, 2, 2359345, 196608, 2, 2424881, 196608, 2, 720946, 262144, 3, 786482, 262144, 3, 852018, 262144, 3, 917554, 262144, 3, 983090, 262144, 3, 1048626, 262144, 3, 1114162, 262144, 3, 1179698, 262144, 3, 1245234, 262144, 3, 1310770, 262144, 3, 1376306, 262144, 3, 1441842, 262144, 3, 1507378, 262144, 3, 1572914, 262144, 3, 1638450, 262144, 3, 1703986, 262144, 3, 1769522, 262144, 3, 1835058, 262144, 3, 1900594, 262144, 3, 1966130, 262144, 3, 2031666, 262144, 3, 2097202, 262144, 3, 2162738, 262144, 3, 2228274, 262144, 3, 2293810, 262144, 3, 2359346, 262144, 3, 2424882, 262144, 3, 720947, 262144, 3, 786483, 262144, 3, 852019, 262144, 3, 917555, 262144, 3, 983091, 262144, 3, 1048627, 262144, 3, 1114163, 262144, 3, 1179699, 262144, 3, 1245235, 262144, 3, 1310771, 262144, 3, 1376307, 262144, 3, 1441843, 262144, 3, 1507379, 262144, 3, 1572915, 262144, 3, 1638451, 262144, 3, 1703987, 262144, 3, 1769523, 262144, 3, 1835059, 262144, 3, 1900595, 262144, 3, 1966131, 262144, 3, 2031667, 262144, 3, 2097203, 262144, 3, 2162739, 262144, 3, 2228275, 262144, 3, 2293811, 262144, 3, 2359347, 262144, 3, 2424883, 262144, 3, 720948, 262144, 3, 786484, 262144, 3, 852020, 262144, 3, 917556, 262144, 3, 983092, 262144, 3, 1048628, 262144, 3, 1114164, 262144, 3, 1179700, 262144, 3, 1245236, 262144, 3, 1310772, 262144, 3, 1376308, 262144, 3, 1441844, 262144, 3, 1507380, 262144, 3, 1572916, 262144, 3, 1638452, 262144, 3, 1703988, 262144, 3, 1769524, 262144, 3, 1835060, 262144, 3, 1900596, 262144, 3, 1966132, 262144, 3, 2031668, 262144, 3, 2097204, 262144, 3, 2162740, 262144, 3, 2228276, 262144, 3, 2293812, 262144, 3, 2359348, 262144, 3, 2424884, 262144, 3, 720949, 262144, 3, 786485, 262144, 3, 852021, 262144, 3, 917557, 262144, 3, 983093, 262144, 3, 1048629, 262144, 3, 1114165, 262144, 3, 1179701, 262144, 3, 1245237, 262144, 3, 1310773, 262144, 3, 1376309, 262144, 3, 1441845, 262144, 3, 1507381, 262144, 3, 1572917, 262144, 3, 1638453, 262144, 3, 1703989, 262144, 3, 1769525, 262144, 3, 1835061, 262144, 3, 1900597, 262144, 3, 1966133, 262144, 3, 2031669, 262144, 3, 2097205, 262144, 3, 2162741, 262144, 3, 2228277, 262144, 3, 2293813, 262144, 3, 2359349, 262144, 3, 2424885, 262144, 3, 2490421, 262144, 3, 2555957, 262144, 3, 2621493, 262144, 3, 2687029, 262144, 3, 2752565, 262144, 3, 2818101, 262144, 3, 2883637, 262144, 3, 655409, 196608, 2, 655410, 262144, 3, 655411, 262144, 3, 655412, 262144, 3, 655413, 262144, 3)

[node name="boss_plataform" type="StaticBody2D" parent="."]
position = Vector2(-33, -8)
collision_layer = 512
collision_mask = 0

[node name="TextureRect" type="TextureRect" parent="boss_plataform"]
offset_left = 282.0
offset_top = 550.0
offset_right = 362.0
offset_bottom = 566.0
texture = ExtResource("10_us368")
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_plataform"]
position = Vector2(322, 558)
shape = SubResource("RectangleShape2D_gcn1j")
one_way_collision = true

[node name="boss_plataform2" type="StaticBody2D" parent="."]
position = Vector2(359, -8)
collision_layer = 512
collision_mask = 0

[node name="TextureRect" type="TextureRect" parent="boss_plataform2"]
offset_left = 282.0
offset_top = 550.0
offset_right = 362.0
offset_bottom = 566.0
texture = ExtResource("10_us368")
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_plataform2"]
position = Vector2(322, 558)
shape = SubResource("RectangleShape2D_gcn1j")
one_way_collision = true

[node name="boss_plataform3" type="StaticBody2D" parent="."]
position = Vector2(163, -8)
collision_layer = 512
collision_mask = 0

[node name="TextureRect" type="TextureRect" parent="boss_plataform3"]
offset_left = 282.0
offset_top = 550.0
offset_right = 362.0
offset_bottom = 566.0
texture = ExtResource("10_us368")
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_plataform3"]
position = Vector2(322, 558)
shape = SubResource("RectangleShape2D_gcn1j")
one_way_collision = true

[node name="camera" type="Camera2D" parent="."]
position = Vector2(475, 486)
zoom = Vector2(1.8, 1.8)
limit_left = -15
limit_right = 8000
limit_bottom = 680
position_smoothing_enabled = true
position_smoothing_speed = 4.0
editor_draw_limits = true

[node name="Player" parent="." instance=ExtResource("7_oycwm")]
position = Vector2(205, 605)
collision_mask = 514

[node name="Boss_fireball" parent="." groups=["enemies"] instance=ExtResource("9_7ndxe")]
position = Vector2(570, 557)

[node name="boss_fight_area_entered" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_fight_area_entered"]
position = Vector2(477, 558)
shape = SubResource("RectangleShape2D_5kipf")

[node name="Node" type="Node" parent="." groups=["projetile"]]

[connection signal="player_dead" from="Player" to="." method="_on_player_player_dead"]
[connection signal="body_entered" from="boss_fight_area_entered" to="." method="_on_boss_fight_area_entered_body_entered"]
